--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@ body>div{
     align-items: center;
     flex-direction: column;
     font-size: small;
+    text-align: center;
     padding: 5px;
     margin: 5px;
 }
